# scrape-with-llm

./: .env  README.md  main.py  pyproject.toml  scrape_sbi.py
app/config/: settings.py  sites.csv
app/database/: connection.py  models.py  operations.py
app/llm/: processor.py  prompts.py  validators.py
app/scheduler/: jobs.py  runner.py
app/scrapers/: base_scraper.py  generic_scraper.py  list_scraper.py  playwright_manager.py  table_scraper.py
app/utils/: logger.py
notebooks/: test_sbi_scraper.ipynb
tests/: test_scrapers.py
