[project]
name = "psu-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.5",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "apscheduler>=3.10.4",
    "httpx>=0.25.2",
    "openpyxl>=3.1.2",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
]
